--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,16 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   firebase_core: ^3.8.0
+  firebase_auth: ^5.2.1
+  flutter_bloc: ^8.1.6
+  equatable:
+  internet_connection_checker:
+  cloud_firestore: ^5.4.1
+  fluttertoast: ^8.2.2
+  responsive_navigation_bar: ^5.0.2
+  flutter_sound: ^9.17.5
+  permission_handler: ^11.3.1
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
