--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   responsive_navigation_bar: ^5.0.2
   flutter_sound: ^9.17.5
   permission_handler: ^11.3.1
+  path_provider:
 
 dev_dependencies:
   flutter_test:
