Now The APIs is running well, please don't change in gradles files, except for the emergency calling feature.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,16 @@ dependencies:
   flutter_sound: ^9.17.5
   permission_handler: ^11.3.1
   path_provider:
+  http: ^1.2.2
+  dio: ^5.7.0
+  file_picker: ^8.1.4
+  #audioplayers: ^6.1.0
+  #flutter_local_notifications: ^18.0.1
+  android_alarm_manager_plus: ^4.0.4
+  device_info_plus: ^11.1.1
+  image: ^4.3.0
+  timezone: ^0.10.0
+  flutter_timezone: ^4.0.0
 
 dev_dependencies:
   flutter_test:
