--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,8 @@ dependencies:
   image: ^4.3.0
   timezone: ^0.10.0
   flutter_timezone: ^4.0.0
+  audioplayers: ^6.1.0
+  url_launcher: ^6.3.1
 
 dev_dependencies:
   flutter_test:
